# mate-color-manager

./: ChangeLog  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac
data/: mcm-calibrate.ui  mcm-picker.ui  mcm-prefs.ui  org.mate.color-manager.gschema.xml
help/: Makefile.am
help/C/: index.docbook
help/cs/: cs.po  index.docbook
help/de/: de.po  index.docbook
help/el/: el.po  index.docbook
help/es/: es.po  index.docbook
help/id/: id.po  index.docbook
help/ru/: index.docbook  ru.po
po/: POTFILES.in  update-linguas.sh
rules/: Makefile.am
src/: Makefile.am  mcm-calibrate-argyll.c  mcm-calibrate.c  mcm-cie-widget.c  mcm-client.c  mcm-client.h  mcm-clut.c  mcm-device-xrandr.c  mcm-device-xrandr.h  mcm-device.c  mcm-device.h  mcm-dump-edid.c  mcm-dump-profile.c  mcm-edid.c  mcm-edid.h  mcm-exif.c  mcm-fix-profile.c  mcm-gamma-widget.c  mcm-image.c  mcm-import.c  mcm-inspect.c  mcm-install-system-wide.c  mcm-picker.c  mcm-prefs.c  mcm-profile-store.c  mcm-profile.c  mcm-profile.h  mcm-screen.c  mcm-screen.h  mcm-self-test.c  mcm-session.c  mcm-trc-widget.c  mcm-utils.c  mcm-utils.h  mcm-xserver.c  org.mate.ColorManager.xml
