@YELP_HELP_RULES@

EXTRA_DIST = C/mate-help.its

HELP_ID = mate-color-manager
HELP_MEDIA =					\
	figures/mcm-adjust.png			\
	figures/mcm-basic.png			\
	figures/mcm-scanner.png			\
	figures/mcm-calibrate-default.png	\
	figures/mcm-calibrate-drawing.png	\
	figures/mcm-print-mode.png		\
	figures/mcm-screen-type.png		\
	figures/mcm-device-configure.png	\
	figures/mcm-import.png

HELP_FILES = \
	legal.xml \
	index.docbook

HELP_LINGUAS = cs de el es id ru

